--- a/Labs/Topics-01-VHDL/03-Combinational_Logic-02/Task 02-01-Structural-with-Primatives/example.qsf
+++ b/Labs/Topics-01-VHDL/03-Combinational_Logic-02/Task 02-01-Structural-with-Primatives/example.qsf
@@ -25,16 +25,11 @@
 
 set_global_assignment -name DEVICE EP4CE22F17C6
 set_global_assignment -name FAMILY "Cyclone IV E"
-set_global_assignment -name TOP_LEVEL_ENTITY top_level
+set_global_assignment -name TOP_LEVEL_ENTITY TRY2
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION "7.1 SP1"
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "10:49:42  FEBRUARY 25, 2008"
-set_global_assignment -name LAST_QUARTUS_VERSION "18.1.1 Lite Edition"
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name LAST_QUARTUS_VERSION "18.1.0 Lite Edition"
 set_global_assignment -name INCREMENTAL_VECTOR_INPUT_SOURCE example_test.vwf
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_global_assignment -name LL_ROOT_REGION ON -section_id "Root Region"
-set_global_assignment -name LL_MEMBER_STATE LOCKED -section_id "Root Region"
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name DEVICE_FILTER_PACKAGE FBGA
@@ -46,12 +41,17 @@ set_location_assignment PIN_E1 -to B
 set_location_assignment PIN_A15 -to Y
 set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (VHDL)"
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulation
-set_global_assignment -name VHDL_FILE orgate2.vhd
-set_global_assignment -name VHDL_FILE notgate.vhd
-set_global_assignment -name VHDL_FILE andgate2.vhd
-set_global_assignment -name BDF_FILE top_level.bdf
-set_global_assignment -name VHDL_FILE AND_OR.vhd
-set_global_assignment -name VECTOR_WAVEFORM_FILE example_test.vwf
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_global_assignment -name VHDL_FILE "02-02 not.vhd"
+set_global_assignment -name VHDL_FILE "02-02 and.vhd"
+set_global_assignment -name VHDL_FILE "02-02 or.vhd"
+set_global_assignment -name VHDL_FILE "02-02 or4.vhd"
+set_global_assignment -name VHDL_FILE TRY2.vhd
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name LL_ROOT_REGION ON -section_id "Root Region"
+set_global_assignment -name LL_MEMBER_STATE LOCKED -section_id "Root Region"
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name VHDL_FILE "02-02 and3.vhd"
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
